# audiobiblio

./: .bash  .gitignore  CHANGELOG.md  Dockerfile  README.md  __version__.py  alembic.ini  audioloader.py  config.yaml.template  docker-compose.yml  metadata.py  metadata_fetch copy.py  pyproject.toml  tag_fixer.py  utils.py  websites_mujrozhlas.json
.superpowers/sdd/: hotfix-report.md  search-report.md  task-1-report.md
archive/: download_sites v20250814v002.py  download_sites v20250814v004.py  download_sites v20250815.01.py  download_sites_bash_v2025081302.py  download_sites_v20250809x13.py  download_sites_v20250809x14.py  download_sites_v20250809x15.py  download_sites_v20250809x16.py  download_sites_v2025081302.py  download_sites_v2025081303.py  download_sites_v202508131.py  download_sites_v20250815.01  metadata v20250814v003.py  metadata_fetch v20250814v003.py  radio_series.py  tags_analyze_folder v20250814v002.py  tags_analyze_folder v20250814v003.py  tags_analyze_folder.txt  tags_analyze_folder_v2025081202.py  tags_analyze_folder_v2025081203.py  tags_analyze_folder_v2025081204.py  tags_analyze_folder_v2025081205.py  tags_analyze_folder_v2025081301.py  utils v20250814v001.py  websites_mujrozhlas.json
audiobiblio/: __main__.py  abs_client.py  audioloader.py  availability.py  catalog.py  cli.py  config.py  crawler.py  dedupe.py  discovery.py  downloader.py  genre_taxonomy.json  jdownloader.py  logging_setup.py  mrz_inspector.py  paths.py  rapi.py  reconcile.py  rules.json  scheduler.py  seed.py  tag_fixer.py  tag_fixer_20250818_v02.py  websites_mujrozhlas.json
audiobiblio/acquire/: availability.py  crawler.py  downloader.py  scheduler.py
audiobiblio/core/: config.py  logging_setup.py  provenance.py  ratelimit.py  time.py  urls.py
audiobiblio/db/: models.py  session.py
audiobiblio/dedupe/: clusters.py  matching.py  upgrades.py
audiobiblio/pipelines/: checks.py  exporters.py  gaps.py  ingest.py  library.py  postprocess.py
audiobiblio/sources/: databazeknih.py  discovery.py  mrz_inspector.py  pairing.py  rapi.py  rozhlas_station.py
audiobiblio/tags/: __init__.py  carryover.py  cli.py  diacritics.py  genre.py  naming.py  nfo.py  reader.py  rules.py  writer.py
audiobiblio/web/: app.py  deps.py  schemas.py  sse.py  tasks.py  views.py
docs/: CHANGELOG-pre-redesign.md  README.md  deploy-nas.md  workflows.md
docs/dead-ends/: 0001-audioloader-v003.md  0002-download-sites-scripts.md  0003-metadata-fetch.md  0004-exiftool-tag-analysis.md  0005-radio-series-standalone-manager.md  0006-stale-tests-importing-removed-symbols.md  0007-channel-level-urls.md  0008-url-as-part-identity.md  README.md
docs/decisions/: 0001-modular-monolith.md  0002-db-source-of-truth.md  0003-works-are-program-level-for-now.md  phase2-import-linter-ignored-violations.md
docs/journal/: build-journal.md
docs/modules/: acquire.md  core.md  dedupe.md  library.md  sources.md  tags.md  web.md
docs/research/: 2026-07-23-api-mujrozhlas.md  2026-07-23-jdownloader-rozhlas.md
migrations/: env.py
migrations/versions/: 059c3c38a79a_add_metadata_values.py  20f737dc3b98_add_crawl_target_approval_mode.py  2ad49dcfcbb6_add_work_expected_total.py  545d050ea843_crawl_targets_paired_url_dual_source_.py  584f34ff6085_add_torrent_entries_table.py  59fa8df761e0_baseline_schema.py  8671e505028d_add_availability_tracking_crawl_targets.py  8e3696d70603_add_upgrade_candidates.py  9ea1585aea8f_add_approval_job_status.py  a3b7c9d1e2f4_episode_alias_program_genre.py  b5c8d2e3f4a1_add_catalog_entries.py  eb491e6892f5_add_import_findings.py  fb8a20de49ae_add_cdwifi_downloads_table.py
scripts/: CDWIFI_TRIP.md  abs_fix_fiction_metadata.py  abs_fix_flat_files.py  abs_generate_metadata.py  abs_normalize_names.py  abs_push_metadata.py  abs_setup_libraries.py  abs_sync_metadata.py  cdwifi_backup.py  cdwifi_manifest.py  cdwifi_termux_dl.py  sktorrent_scraper.py  sktorrent_scraper_standalone.py
scripts/trip_manifests/: manifest_20260713.json
tests/: conftest.py  fixtures_util.py  test_architecture.py  test_dedupe_jobs_cmd.py  test_no_stale_imports.py  test_provenance_routing.py
tests/acquire/: test_archive_stubs.py  test_crawl_status_cli.py  test_crawl_target_persistence.py  test_mrz_parent_url.py  test_multipart_expansion.py  test_pacing.py  test_station_program_crawl.py  test_target_state.py
tests/core/: test_approval_mode.py  test_provenance.py  test_record_value.py  test_urls.py
tests/dedupe/: test_clusters.py  test_matching.py  test_upgrades.py
tests/fixtures/: sft_archive_page.html
tests/sources/: test_databazeknih.py  test_mrz_inspector.py  test_pairing.py
tests/tags/: test_carryover.py  test_diacritics.py  test_naming.py
tests/web/: conftest.py  test_console_view.py  (+18 more)
(+57 files in other folders)
