[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobiblio"
version = "0.7.2"
description = "Audiobook crawler/downloader + tag fixer for mujrozhlas.cz"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "haxny" }]
license = "MIT"

dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "click>=8.1",
  "structlog>=24.1",
  "pydantic>=2.7",
  "typer>=0.12",
  "yt-dlp>=2024.7.7",                   # unpinned as you wanted
  "mutagen>=1.47",
  "requests>=2.32",
  "Pillow>=10.0",
  "rich>=13.7",
  "beautifulsoup4>=4.12",
  "platformdirs>=4.2",
  "PyYAML>=6.0",
  "APScheduler>=3.10",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.0",
  "unidecode>=1.4.0",
]

[project.optional-dependencies]
fs = ["xxhash>=3.4"]
downloader = ["Pillow", "yt-dlp", "requests", "mutagen"]
tags = ["mutagen", "rich", "structlog", "PyYAML"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "import-linter>=2.0",
  "httpx2>=2.5.0",
]

[project.scripts]
audiobiblio = "audiobiblio.cli:app"
audioloader = "audiobiblio.library.audioloader:main"
tag-fixer   = "audiobiblio.tags.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audiobiblio*"]

[tool.setuptools.package-data]
audiobiblio = ["web/templates/**/*.html", "web/static/**/*", "genre_taxonomy.json"]

[tool.importlinter]
root_package = "audiobiblio"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
  "audiobiblio.web",
  "audiobiblio.cli",
  "audiobiblio.acquire | audiobiblio.library",
  "audiobiblio.sources | audiobiblio.dedupe | audiobiblio.tags",
  "audiobiblio.core",
]
containers = []
exhaustive = false
ignore_imports = [
  # TODO(phase2): acquire calls library pipelines at runtime; decouple via events/callbacks or shared lower-layer interface
  "audiobiblio.acquire.downloader -> audiobiblio.library.pipelines.postprocess",
  "audiobiblio.acquire.downloader -> audiobiblio.library.pipelines.library",
  # TODO(phase2→): media-info capture after download; same cross-tier coupling as above
  "audiobiblio.acquire.downloader -> audiobiblio.library.mediainfo",
  # TODO(phase2→): meta_json enrichment hook after download; same cross-tier coupling as above
  "audiobiblio.acquire.downloader -> audiobiblio.library.enrich_meta",
  "audiobiblio.acquire.crawler -> audiobiblio.library.pipelines.ingest",
  # TODO(phase3): scheduler job for trash purge; decouple via events or shared lower-layer interface
  "audiobiblio.acquire.scheduler -> audiobiblio.library.trash",
  # TODO(phase2): cli.serve_web bootstraps the web app inline; extract to a dedicated entrypoint or lazy loader
  "audiobiblio.cli -> audiobiblio.web.app",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
